--- a/output/data.html
+++ b/output/data.html
@@ -53,25 +53,21 @@
     <div class="emscripten">
       <progress value="0" max="100" id="progress" hidden=1></progress>  
     </div>
-    <div class="emscripten_border">
-      <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
-    </div>
-    <hr/>
-    <div class="emscripten">
-      <input type="checkbox" id="resize">Resize canvas
-      <input type="checkbox" id="pointerLock" checked>Lock/hide mouse pointer
-      &nbsp;&nbsp;&nbsp;
-      <input type="button" value="Fullscreen" onclick="Module.requestFullscreen(document.getElementById('pointerLock').checked, 
-                                                                                document.getElementById('resize').checked)">
-    </div>
     
     <hr/>
-    <textarea class="emscripten" id="output" rows="8"></textarea>
+    <textarea class="emscripten" id="output" rows="16"></textarea>
+    Benchmark to Run: &nbsp;
+    <select id="benchmark"> 
+        <option value="priorityQueue">Priority Queue</option> 
+        <option value="floydWarshall" selected>Floyd Warshall (Graph)</option>
+    </select>
     <button id="run">Run</button>
     <hr>
     <script type='text/javascript' src="../shell_call.js"> </script>
-    <script async type="text/javascript" src="https://cdn.rawgit.com/lemire/FastPriorityQueue.js/ad14d608c4a768d40ec925a3395cbd5a95540243/FastPriorityQueue.js"></script>
-    <script async type="text/javascript" src="https://cdn.rawgit.com/qiao/heap.js/34bd86f297a7f408e27d8eb286c59207f4974a43/lib/heap.js"></script>
+    <script type='text/javascript' src="../pi_minus_3.js"> </script>
+    <script async type="text/javascript" src="../external_js/FastPriorityQueue.js"></script>
+    <script async type="text/javascript" src="../external_js/heap.js"></script>
+    <script async type="text/javascript" src="../external_js/graphlib.js"></script>
     <script async type="text/javascript" src="data.js"></script>
   </body>
 </html>
